--- a/kin-rsocket-broker-service/pom.xml
+++ b/kin-rsocket-broker-service/pom.xml
@@ -8,7 +8,15 @@
         <version>0.1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>kin-rsocket-service-common</artifactId>
+    <artifactId>kin-rsocket-broker-service</artifactId>
     <version>0.1.0.0</version>
     <packaging>jar</packaging>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.kin</groupId>
+            <artifactId>kin-rsocket-core</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
 </project>
