--- a/kin-rsocket-broker-core/pom.xml
+++ b/kin-rsocket-broker-core/pom.xml
@@ -8,7 +8,7 @@
         <version>0.1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>kin-rsocket-core</artifactId>
+    <artifactId>kin-rsocket-broker-core</artifactId>
     <version>0.1.0.0</version>
     <packaging>jar</packaging>
 
