--- a/kin-rsocket-broker-server/pom.xml
+++ b/kin-rsocket-broker-server/pom.xml
@@ -15,7 +15,7 @@
     <dependencies>
         <dependency>
             <groupId>org.kin</groupId>
-            <artifactId>kin-rsocket-core</artifactId>
+            <artifactId>kin-rsocket-broker-core</artifactId>
             <version>${project.version}</version>
         </dependency>
 
