--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <version>0.1.0.0</version>
     <modules>
         <module>kin-rsocket-broker-server</module>
-        <module>kin-rsocket-core</module>
+        <module>kin-rsocket-broker-core</module>
         <module>kin-rsocket-broker-service</module>
     </modules>
     <packaging>pom</packaging>
