--- a/kin-rsocket-example/pom.xml
+++ b/kin-rsocket-example/pom.xml
@@ -8,15 +8,16 @@
         <version>0.1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>kin-rsocket-broker-service</artifactId>
+    <artifactId>kin-rsocket-example</artifactId>
     <version>0.1.0.0</version>
     <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
             <groupId>org.kin</groupId>
-            <artifactId>kin-rsocket-broker-core</artifactId>
+            <artifactId>kin-rsocket-service</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
+
 </project>
