--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,9 @@
     <version>0.1.0.0</version>
     <modules>
         <module>kin-rsocket-broker-server</module>
-        <module>kin-rsocket-broker-core</module>
-        <module>kin-rsocket-broker-service</module>
+        <module>kin-rsocket-core</module>
+        <module>kin-rsocket-service</module>
+        <module>kin-rsocket-example</module>
     </modules>
     <packaging>pom</packaging>
 
