--- a/kin-rsocket-core/pom.xml
+++ b/kin-rsocket-core/pom.xml
@@ -5,11 +5,10 @@
     <parent>
         <artifactId>kin-rsocket-broker-parent</artifactId>
         <groupId>org.kin</groupId>
-        <version>0.1.0.0</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>kin-rsocket-core</artifactId>
-    <version>0.1.0.0</version>
     <packaging>jar</packaging>
 
     <dependencies>
@@ -17,6 +16,37 @@
             <groupId>org.kin</groupId>
             <artifactId>kin-framework-java</artifactId>
             <version>${kin-framework.version}</version>
+        </dependency>
+
+        <!-- codec -->
+        <dependency>
+            <groupId>org.kin</groupId>
+            <artifactId>kin-rpc-serialization-json</artifactId>
+            <version>${kin-rpc-serialization.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.kin</groupId>
+            <artifactId>kin-rpc-serialization-protobuf</artifactId>
+            <version>${kin-rpc-serialization.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.kin</groupId>
+            <artifactId>kin-rpc-serialization-avro</artifactId>
+            <version>${kin-rpc-serialization.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.kin</groupId>
+            <artifactId>kin-rpc-serialization-hessian2</artifactId>
+            <version>${kin-rpc-serialization.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.kin</groupId>
+            <artifactId>kin-rpc-serialization-kryo</artifactId>
+            <version>${kin-rpc-serialization.version}</version>
         </dependency>
 
         <!-- reactor -->
@@ -53,6 +83,12 @@
             <groupId>io.cloudevents</groupId>
             <artifactId>cloudevents-json-jackson</artifactId>
             <version>${cloudevents.version}</version>
+        </dependency>
+
+        <!-- spring -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-commons</artifactId>
         </dependency>
     </dependencies>
 </project>
