项目初始化

--- a/kin-rsocket-core/pom.xml
+++ b/kin-rsocket-core/pom.xml
@@ -72,6 +72,11 @@
             <artifactId>rsocket-core</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>io.rsocket</groupId>
+            <artifactId>rsocket-transport-local</artifactId>
+        </dependency>
+
         <!-- cloud event定义 -->
         <dependency>
             <groupId>io.cloudevents</groupId>
@@ -89,6 +94,15 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-commons</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- byte buddy(基于ASM) -->
+        <dependency>
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy</artifactId>
+            <version>${byte-buddy.version}</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
