--- a/kin-rsocket-broker/pom.xml
+++ b/kin-rsocket-broker/pom.xml
@@ -8,7 +8,7 @@
         <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>kin-rsocket-broker-server</artifactId>
+    <artifactId>kin-rsocket-broker</artifactId>
     <packaging>jar</packaging>
 
     <dependencies>
@@ -22,19 +22,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
-        </dependency>
-
-        <!-- gossip -->
-        <dependency>
-            <groupId>io.scalecube</groupId>
-            <artifactId>scalecube-cluster</artifactId>
-            <version>${scalecube-cluster.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>io.scalecube</groupId>
-            <artifactId>scalecube-codec-jackson</artifactId>
-            <version>${scalecube-cluster.version}</version>
         </dependency>
 
         <!-- actuator -->
