--- a/kin-rsocket-core/pom.xml
+++ b/kin-rsocket-core/pom.xml
@@ -100,6 +100,11 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
             <scope>provided</scope>
         </dependency>
     </dependencies>
