项目初始化

--- a/kin-rsocket-broker/src/main/resources/application.yml
+++ b/kin-rsocket-broker/src/main/resources/application.yml
@@ -9,7 +9,7 @@ kin:
     broker:
       port: 9999
       topology: standalone
-      auth-required: false
+      auth: false
 
 # management
 management:
