--- a/kin-rsocket-auth/kin-rsocket-auth-api/pom.xml
+++ b/kin-rsocket-auth/kin-rsocket-auth-api/pom.xml
@@ -3,15 +3,11 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>kin-rsocket-broker-parent</artifactId>
+        <artifactId>kin-rsocket-auth</artifactId>
         <groupId>org.kin</groupId>
-        <version>${revision}</version>
+        <version>0.1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>kin-rsocket-auth</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>kin-rsocket-auth-jwt</module>
-        <module>kin-rsocket-auth-api</module>
-    </modules>
+    <artifactId>kin-rsocket-auth-api</artifactId>
+    <packaging>jar</packaging>
 </project>
