--- a/kin-rsocket-auth/kin-rsocket-auth-jwt-starter/pom.xml
+++ b/kin-rsocket-auth/kin-rsocket-auth-jwt-starter/pom.xml
@@ -3,33 +3,37 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>kin-rsocket-broker-parent</artifactId>
+        <artifactId>kin-rsocket-auth</artifactId>
         <groupId>org.kin</groupId>
-        <version>${revision}</version>
+        <version>0.1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>kin-rsocket-broker-gossip</artifactId>
+    <artifactId>kin-rsocket-auth-jwt-starter</artifactId>
     <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
             <groupId>org.kin</groupId>
-            <artifactId>kin-rsocket-broker</artifactId>
+            <artifactId>kin-rsocket-auth-api</artifactId>
             <version>${project.version}</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <!-- gossip -->
-        <dependency>
-            <groupId>io.scalecube</groupId>
-            <artifactId>scalecube-cluster</artifactId>
-            <version>${scalecube-cluster.version}</version>
         </dependency>
 
         <dependency>
-            <groupId>io.scalecube</groupId>
-            <artifactId>scalecube-codec-jackson</artifactId>
-            <version>${scalecube-cluster.version}</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+
+        <!--security-->
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>${java-jwt.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
         </dependency>
     </dependencies>
 
