--- a/kin-rsocket-auth/pom.xml
+++ b/kin-rsocket-auth/pom.xml
@@ -11,7 +11,7 @@
     <artifactId>kin-rsocket-auth</artifactId>
     <packaging>pom</packaging>
     <modules>
-        <module>kin-rsocket-auth-jwt</module>
+        <module>kin-rsocket-auth-jwt-starter</module>
         <module>kin-rsocket-auth-api</module>
     </modules>
 </project>
