--- a/kin-rsocket-broker-gateway-http-starter/pom.xml
+++ b/kin-rsocket-broker-gateway-http-starter/pom.xml
@@ -5,25 +5,35 @@
     <parent>
         <artifactId>kin-rsocket-broker-parent</artifactId>
         <groupId>org.kin</groupId>
-        <version>${revision}</version>
+        <version>0.1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>spring-cloud-starter-kin-rsocket-broker-registry-client</artifactId>
+    <artifactId>kin-rsocket-broker-gateway-http-starter</artifactId>
     <packaging>jar</packaging>
-
 
     <dependencies>
         <dependency>
             <groupId>org.kin</groupId>
             <artifactId>kin-rsocket-service</artifactId>
             <version>${project.version}</version>
-            <scope>provided</scope>
+        </dependency>
+
+        <!-- 默认jwt -->
+        <dependency>
+            <groupId>org.kin</groupId>
+            <artifactId>kin-rsocket-auth-jwt-starter</artifactId>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-commons</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.kin</groupId>
+            <artifactId>kin-rsocket-auth</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
-
 </project>
