--- a/kin-rsocket-broker-gossip-starter/pom.xml
+++ b/kin-rsocket-broker-gossip-starter/pom.xml
@@ -5,28 +5,31 @@
     <parent>
         <artifactId>kin-rsocket-broker-parent</artifactId>
         <groupId>org.kin</groupId>
-        <version>0.1.0.0</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>spring-cloud-starter-kin-rsocket-broker-conf-client</artifactId>
+    <artifactId>kin-rsocket-broker-gossip-starter</artifactId>
     <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
             <groupId>org.kin</groupId>
-            <artifactId>kin-rsocket-service</artifactId>
+            <artifactId>kin-rsocket-broker</artifactId>
             <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
 
+        <!-- gossip -->
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-context</artifactId>
+            <groupId>io.scalecube</groupId>
+            <artifactId>scalecube-cluster</artifactId>
+            <version>${scalecube-cluster.version}</version>
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-webflux</artifactId>
+            <groupId>io.scalecube</groupId>
+            <artifactId>scalecube-codec-jackson</artifactId>
+            <version>${scalecube-cluster.version}</version>
         </dependency>
     </dependencies>
 
