--- a/kin-rsocket-broker-registry-client-starter/pom.xml
+++ b/kin-rsocket-broker-registry-client-starter/pom.xml
@@ -5,35 +5,25 @@
     <parent>
         <artifactId>kin-rsocket-broker-parent</artifactId>
         <groupId>org.kin</groupId>
-        <version>0.1.0.0</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>spring-cloud-starter-kin-rsocket-broker-gateway-http</artifactId>
+    <artifactId>kin-rsocket-broker-registry-client-starter</artifactId>
     <packaging>jar</packaging>
+
 
     <dependencies>
         <dependency>
             <groupId>org.kin</groupId>
             <artifactId>kin-rsocket-service</artifactId>
             <version>${project.version}</version>
-        </dependency>
-
-        <!-- 默认jwt -->
-        <dependency>
-            <groupId>org.kin</groupId>
-            <artifactId>kin-rsocket-auth-jwt</artifactId>
-            <version>${project.version}</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-webflux</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.kin</groupId>
-            <artifactId>kin-rsocket-auth</artifactId>
-            <version>${project.version}</version>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-commons</artifactId>
         </dependency>
     </dependencies>
+
 </project>
