--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>kin-rsocket-broker-conf-client-starter</module>
         <module>kin-rsocket-broker-gateway-http-starter</module>
         <module>kin-rsocket-auth</module>
+        <module>kin-rsocket-conf</module>
     </modules>
     <packaging>pom</packaging>
 
