项目初始化

--- a/kin-rsocket-broker/src/main/resources/application.yml
+++ b/kin-rsocket-broker/src/main/resources/application.yml
@@ -18,7 +18,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: *
+        include: "*"
       health:
         show-details: always
       shutdown:
