--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
         <jackson.version>2.10.1</jackson.version>
         <javassist.version>3.25.0-GA</javassist.version>
         <spring-cloud-release.version>2020.0.2</spring-cloud-release.version>
-        <springboot.version>2.3.1.RELEASE</springboot.version>
+        <springboot.version>2.4.4</springboot.version>
         <reactor.version>Dysprosium-SR16</reactor.version>
         <rsocket.version>1.1.0</rsocket.version>
         <cloudevents.version>2.0.0.RC2</cloudevents.version>
