--- a/kin-rsocket-example/kin-rsocket-example-requester/pom.xml
+++ b/kin-rsocket-example/kin-rsocket-example-requester/pom.xml
@@ -9,13 +9,18 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>kin-rsocket-example-requester</artifactId>
-    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
             <groupId>org.kin</groupId>
-            <artifactId>kin-rsocket-service</artifactId>
+            <artifactId>kin-rsocket-example-api</artifactId>
             <version>${project.version}</version>
+        </dependency>
+
+        <!-- reactive web -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
     </dependencies>
 
