--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
         <javassist.version>3.25.0-GA</javassist.version>
         <spring-cloud-release.version>2020.0.2</spring-cloud-release.version>
         <springboot.version>2.4.4</springboot.version>
-        <reactor.version>Dysprosium-SR16</reactor.version>
+        <reactor.version>2020.0.0</reactor.version>
         <rsocket.version>1.1.0</rsocket.version>
         <cloudevents.version>2.0.0.RC2</cloudevents.version>
         <java-jwt.version>3.12.1</java-jwt.version>
