--- a/kin-rsocket-example/kin-rsocket-example-api/pom.xml
+++ b/kin-rsocket-example/kin-rsocket-example-api/pom.xml
@@ -13,7 +13,7 @@
     <dependencies>
         <dependency>
             <groupId>org.kin</groupId>
-            <artifactId>kin-rsocket-service</artifactId>
+            <artifactId>kin-rsocket-service-starter</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
