--- a/kin-rsocket-service-starter/pom.xml
+++ b/kin-rsocket-service-starter/pom.xml
@@ -8,22 +8,19 @@
         <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>kin-rsocket-service</artifactId>
+    <artifactId>kin-rsocket-service-starter</artifactId>
     <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
             <groupId>org.kin</groupId>
-            <artifactId>kin-rsocket-core</artifactId>
+            <artifactId>kin-rsocket-service</artifactId>
             <version>${project.version}</version>
         </dependency>
 
-        <!-- byte buddy(基于ASM) -->
         <dependency>
-            <groupId>net.bytebuddy</groupId>
-            <artifactId>byte-buddy</artifactId>
-            <version>${byte-buddy.version}</version>
-            <scope>provided</scope>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
     </dependencies>
 </project>
