优化(处理掉)todo

--- a/kin-rsocket-broker-gateway-http-starter/pom.xml
+++ b/kin-rsocket-broker-gateway-http-starter/pom.xml
@@ -14,8 +14,9 @@
     <dependencies>
         <dependency>
             <groupId>org.kin</groupId>
-            <artifactId>kin-rsocket-service</artifactId>
+            <artifactId>kin-rsocket-service-starter</artifactId>
             <version>${project.version}</version>
+            <scope>provided</scope>
         </dependency>
 
         <!-- 默认jwt -->
