--- a/kin-rsocket-broker-registry-client-starter/pom.xml
+++ b/kin-rsocket-broker-registry-client-starter/pom.xml
@@ -15,7 +15,7 @@
     <dependencies>
         <dependency>
             <groupId>org.kin</groupId>
-            <artifactId>kin-rsocket-service</artifactId>
+            <artifactId>kin-rsocket-service-starter</artifactId>
             <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
