1. pom优化 2. module优化 3. 删除无用代码

--- a/kin-rsocket-auth/pom.xml
+++ b/kin-rsocket-auth/pom.xml
@@ -14,4 +14,12 @@
         <module>kin-rsocket-auth-jwt-starter</module>
         <module>kin-rsocket-auth-api</module>
     </modules>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.kin</groupId>
+            <artifactId>kin-rsocket-auth-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
 </project>
