--- a/kin-rsocket-service-conf-client-starter/pom.xml
+++ b/kin-rsocket-service-conf-client-starter/pom.xml
@@ -5,10 +5,10 @@
     <parent>
         <artifactId>kin-rsocket-broker-parent</artifactId>
         <groupId>org.kin</groupId>
-        <version>0.1.0.0</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>kin-rsocket-broker-conf-client-starter</artifactId>
+    <artifactId>kin-rsocket-service-conf-client-starter</artifactId>
     <packaging>jar</packaging>
 
     <dependencies>
