--- a/kin-rsocket-broker-starter/src/main/resources/META-INF/spring-configuration-metadata.json
+++ b/kin-rsocket-broker-starter/src/main/resources/META-INF/spring-configuration-metadata.json
@@ -17,7 +17,7 @@
     {
       "name": "kin.rsocket.broker.authDir",
       "type": "java.lang.String",
-      "description": "rsocket broker校验token文件",
+      "description": "rsocket broker校验token文件目录",
       "sourceType": "org.kin.rsocket.broker.RSocketBrokerProperties",
       "defaultValue": "{user.home}/.rsocket/"
     },
@@ -38,7 +38,7 @@
     {
       "name": "kin.rsocket.broker.upstreamToken",
       "type": "java.lang.Boolean",
-      "description": "remote rsocket broker",
+      "description": "remote rsocket broker token, 支持文件路径配置",
       "sourceType": "org.kin.rsocket.broker.RSocketBrokerProperties",
       "defaultValue": ""
     },
