--- a/kin-rsocket-conf/kin-rsocket-conf-h2-starter/pom.xml
+++ b/kin-rsocket-conf/kin-rsocket-conf-h2-starter/pom.xml
@@ -13,6 +13,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.kin</groupId>
+            <artifactId>kin-rsocket-conf-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
         </dependency>
