--- a/kin-rsocket-auth/kin-rsocket-auth-jwt-starter/pom.xml
+++ b/kin-rsocket-auth/kin-rsocket-auth-jwt-starter/pom.xml
@@ -13,6 +13,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.kin</groupId>
+            <artifactId>kin-rsocket-auth-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
