broker新增路由规则

--- a/kin-rsocket-broker-starter/src/main/resources/META-INF/spring-configuration-metadata.json
+++ b/kin-rsocket-broker-starter/src/main/resources/META-INF/spring-configuration-metadata.json
@@ -69,6 +69,13 @@
       "description": "rsocket broker connection ssl key store password",
       "sourceType": "org.kin.rsocket.broker.RSocketBrokerProperties",
       "defaultValue": "kin"
+    },
+    {
+      "name": "kin.rsocket.broker.route",
+      "type": "java.lang.String",
+      "description": "rsocket broker consumer请求路由规则",
+      "sourceType": "org.kin.rsocket.broker.RSocketBrokerProperties",
+      "defaultValue": "random roundRobin"
     }
   ]
 }
