--- a/kin-rsocket-gateway-http-starter/pom.xml
+++ b/kin-rsocket-gateway-http-starter/pom.xml
@@ -8,7 +8,7 @@
         <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>kin-rsocket-broker-gateway-http-starter</artifactId>
+    <artifactId>kin-rsocket-gateway-http-starter</artifactId>
     <packaging>jar</packaging>
 
     <dependencies>
@@ -28,6 +28,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
