配置中心代码优化及bug修复

--- a/kin-rsocket-example/kin-rsocket-example-responder/pom.xml
+++ b/kin-rsocket-example/kin-rsocket-example-responder/pom.xml
@@ -17,6 +17,12 @@
             <version>${project.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.kin</groupId>
+            <artifactId>kin-rsocket-service-conf-client-starter</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
         <!-- reactive web -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
