--- a/kin-rsocket-service-conf-client-starter/pom.xml
+++ b/kin-rsocket-service-conf-client-starter/pom.xml
@@ -21,7 +21,7 @@
 
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-context</artifactId>
+            <artifactId>spring-cloud-starter-bootstrap</artifactId>
         </dependency>
 
         <dependency>
