--- a/kin-rsocket-service-conf-client-starter/src/main/resources/META-INF/spring-configuration-metadata.json
+++ b/kin-rsocket-service-conf-client-starter/src/main/resources/META-INF/spring-configuration-metadata.json
@@ -4,7 +4,7 @@
       "name": "kin.rsocket.conf.auto-refresh",
       "type": "java.lang.Boolean",
       "description": "rsocket service是否支持自动动态刷新配置",
-      "sourceType": "org.kin.rsocket.spingcloud.broker.conf.client.RSocketServiceConfProperties",
+      "sourceType": "org.kin.rsocket.spingcloud.conf.client.RSocketServiceConfProperties",
       "defaultValue": "false"
     }
   ]
