新增支持使用@RSocketServiceReferences和@RSocketServiceReference注解创建rsocket reference

--- a/kin-rsocket-service/pom.xml
+++ b/kin-rsocket-service/pom.xml
@@ -25,5 +25,12 @@
             <version>${byte-buddy.version}</version>
             <scope>provided</scope>
         </dependency>
+
+        <!-- spring -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
