rsocket broker gossip 集群模式bug修复, 代码优化以及module结构修改

--- a/kin-rsocket-example/kin-rsocket-example-broker/pom.xml
+++ b/kin-rsocket-example/kin-rsocket-example-broker/pom.xml
@@ -17,6 +17,12 @@
             <artifactId>kin-rsocket-broker-gossip-starter</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.kin</groupId>
+            <artifactId>kin-rsocket-broker-standalone-starter</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
