--- a/kin-rsocket-broker/pom.xml
+++ b/kin-rsocket-broker/pom.xml
@@ -42,7 +42,7 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
-        <!-- spring -->
+        <!-- spring cloud -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-commons</artifactId>
