1.router临时数据存储优化 2.类命名修改, 代码格式化, 以及添加必要的注释

--- a/kin-rsocket-gateway-http-starter/src/main/resources/META-INF/spring-configuration-metadata.json
+++ b/kin-rsocket-gateway-http-starter/src/main/resources/META-INF/spring-configuration-metadata.json
@@ -1,7 +1,7 @@
 {
   "properties": [
     {
-      "name": "kin.rsocket.gateway.restapiAuth",
+      "name": "kin.rsocket.gateway.restApiAuth",
       "type": "java.lang.Boolean",
       "description": "rsocket http gateway是否开启校验",
       "sourceType": "org.kin.rsocket.springcloud.gateway.http.RSocketBrokerHttpGatewayProperties",
