支持基于k8s的rsocket broker集群管理

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>kin-rsocket-service-starter</module>
         <module>kin-rsocket-bom</module>
         <module>kin-rsocket-cloud-function-starter</module>
+        <module>kin-rsocket-broker-discovery-starter</module>
     </modules>
     <packaging>pom</packaging>
 
