--- a/kin-rsocket-core/pom.xml
+++ b/kin-rsocket-core/pom.xml
@@ -94,5 +94,11 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-core</artifactId>
+            <version>${micrometer.version}</version>
+        </dependency>
     </dependencies>
 </project>
